--- a/releases/prodinfo.yaml
+++ b/releases/prodinfo.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: podinfo-prod
+  name: podinfo-prod1
   namespace: prod
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/chart-image: semver:~0.4
 spec:
-  releaseName: podinfo-prod
+  releaseName: podinfo-prod1
   chart:
     git: git@github.com:Ashishkasaudhan/helm-operator-get-started
     path: charts/podinfo
