--- a/releases/stginfo.yaml
+++ b/releases/stginfo.yaml
@@ -2,13 +2,13 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: podinfo-rc
+  name: podinfo-rc1
   namespace: stg
   annotations:
     fluxcd.io/automated: "true"
     filter.fluxcd.io/chart-image: glob:stg-*
 spec:
-  releaseName: podinfo-rc
+  releaseName: podinfo-rc1
   chart:
     git: git@github.com:Akasaudhan/helm-operator-get-started
     path: charts/podinfo
